--- a/public/client/css/search-bar.css
+++ b/public/client/css/search-bar.css
@@ -5,50 +5,47 @@
 }
 
 .search-bar-logo {
-  display: inline-block;
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .search-bar-container {
-  width: 1080px;
+  width: 1200px;
   margin: auto;
-  display: flex;
-  height: 80px;
+  display: table;
 }
 
 .nav-logo {
-  padding: 10px;
+  vertical-align: middle;
 }
 
 .search-bar-list {
-  display: flex;
-  flex: 1;
-  flex-direction: row-reverse;
+  display: table;
+  width: 100%;
 }
 
 .search-bar-list .section {
   /* border-left: 1px solid white; */
   border-right: 1px solid #888888;
-}
-
-.section {
-  display: flex;
-  flex-direction: column;
+  display: table-cell;
 }
 
 .section.search {
-  width: 150px;
+  width: 60px;
 }
 
 .section.count {
-  width: 210px;
+  width: 80px;
 }
 
 .section.date {
-  width: 200px;
+  width: 80px;
+  padding-bottom: 5px;
 }
 
 .section.hotel {
-  width: 220px;
+  width: 80px;
+  position: relative;
 }
 
 .hotel-select {
@@ -57,6 +54,10 @@
   text-align: center;
   display: none;
   z-index: 10;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  top: 75px;
 }
 
 .hotel-select span {
@@ -77,19 +78,47 @@
 .search-bar-list .section .title {
   color: #d6d6d6;
   text-align: center;
-  margin-top: 10px;
+  margin-top: 7px;
   font-size: 0.75rem;
   letter-spacing: 1px;
+  margin-bottom: 3px;
 }
 
 .search-bar-list .section .content {
-  /* flex: 1; */
-  padding: 5px;
   color: #e4e4e4;
   text-align: center;
   font-size: 1.3rem;
   letter-spacing: 1px;
   font-weight: 300;
+  display: table;
+  width: 100%;
+  position: relative;
+}
+
+#target_hotel {
+  display: table-cell;
+
+}
+
+#target_hotel_name {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100px;
+  display: inline-block;
+  margin: auto;
+}
+
+#select_hotel {
+  position: absolute;
+  top: 10px;
+  right: 30px;
+}
+
+#dates {
+  position: absolute;
+  top: 5px;
+  right: 30px;
 }
 
 .search-bar-list .section .content .input-search {
