--- a/views/client/list.html
+++ b/views/client/list.html
@@ -29,6 +29,8 @@
           </span>
         </div>
         <div class='gnb-navbar'>
+          <span class="my_page">강병욱님 / MY PAGE</span>
+          <span class="my_point">포인트 3,000P</span>
           <span> 호텔정보 </span>
           <span> 공지사항 </span>
           <span> 이벤트 </span>
@@ -47,37 +49,33 @@
         </div>
         <div class='search-bar-list'>
 
-          <!-- 검색 -->
-          <div class='section search'>
+          <!-- 호텔 선택 -->
+          <div class='section hotel' style="border-left: 1px solid #888888;">
             <div class='title'>
-              <span> 예약 가능 객실 </span>
-            </div>
-            <div class='content' style="cursor:pointer;">
-              <img src="../../public/client/images/01_main/main_bar_search.png" class="btn-image">
-              <span> 검색 </span>
-            </div>
-          </div>
-
-          <!-- 인원수 -->
-          <div class='section count'>
-            <div class='title'>
-              <span> 인원수 </span>
+              <span> HOTEL BRAND </span>
             </div>
             <div class='content'>
-              <img id="count_down" src="../../public/client/images/01_main/main_bar_03.png" style="margin-right:20px;" class="btn-image">
-              <input id="count_val" class="input-search" type="number" name="" value="1"></input>
-              <img id="count_up" src="../../public/client/images/01_main/main_bar_04.png" style="margin-left:20px;" class="btn-image">
+              <div id="target_hotel">
+                <span id="target_hotel_name">호텔 선택</span>
+                <img id="select_hotel" src="../../public/client/images/01_main/main_bar_01.png" class="btn-image">
+              </div>
+            </div>
+            <div id="hotel_list" class="hotel-select">
+              <span> something 1 </span>
+              <span> something 21 </span>
+              <span> something 31 </span>
+              <span> something 41 </span>
             </div>
           </div>
 
-          <!-- 인원수 -->
-          <div class='section count'>
+          <!-- 호텔선택 -->
+          <div class='section date'>
             <div class='title'>
               <span> 예약 날짜 </span>
             </div>
-            <div class='content' style="margin-left:30px;padding-top:0px;">
-              <span style="font-size:1rem;display:inline-block;"> <span id="startDate">2018-09-20 </span> ~ </br> <span id="endDate"> 2018-09-21 </span> </span>
-              <img id="dates" src="../../public/client/images/01_main/main_bar_02.png" style="margin-bottom:40px;" class="btn-image">
+            <div class='content' >
+              <span style="font-size:1rem;display:inline-block;line-height: 1.2rem;"> <span id="startDate">2018-09-20 </span> ~ </br> <span id="endDate"> 2018-09-21 </span> </span>
+              <img id="dates" src="../../public/client/images/01_main/main_bar_02.png" class="btn-image">
               <script type="text/javascript">
                 var nowTemp = new Date();
                 var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
@@ -134,44 +132,48 @@
             </div>
           </div>
 
-          <!-- 호텔 선택 -->
-          <div class='section hotel' style="border-left: 1px solid #888888;">
+          <!-- 인원수 -->
+          <div class='section count'>
             <div class='title'>
-              <span> HOTEL BRAND </span>
+              <span> 인원수 </span>
             </div>
             <div class='content'>
-              <div id="target_hotel" style="display:inline-block;width:130px;margin-left:20px;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;">
-                호텔 선택
-              </div>
-              <img id="select_hotel" style="margin-bottom: 20px;" src="../../public/client/images/01_main/main_bar_01.png" class="btn-image">
+              <img id="count_down" src="../../public/client/images/01_main/main_bar_03.png" style="margin-right:30px;" class="btn-image">
+              <input id="count_val" class="input-search" type="number" name="" value="1"></input>
+              <img id="count_up" src="../../public/client/images/01_main/main_bar_04.png" style="margin-left:30px;" class="btn-image">
             </div>
-            <div id="hotel_list" class="hotel-select" style="width:220px;">
-              <span> something 1 </span>
-              <span> something 21 </span>
-              <span> something 31 </span>
-              <span> something 41 </span>
+          </div>
+
+          <!-- 검색 -->
+          <div class='section search'>
+            <div class='title'>
+              <span> 예약 가능 객실 </span>
+            </div>
+            <div class='content' style="cursor:pointer;">
+              <img src="../../public/client/images/01_main/main_bar_search.png" class="btn-image">
+              <span> 검색 </span>
             </div>
           </div>
 
           <script type="text/javascript">
-            $("#count_down").click( (e) => {
+            $("#count_down").click( function() {
               var cur_val = Number($("#count_val").val());
               if(cur_val <= 1) return false;
               $("#count_val").val( cur_val - 1 );
             });
 
-            $("#count_up").click( (e) => {
+            $("#count_up").click( function() {
               var cur_val = Number($("#count_val").val());
               $("#count_val").val( cur_val + 1 );
             });
 
-            $("#select_hotel").click( (e) => {
+            $("#select_hotel").click( function() {
               $("#hotel_list").toggle();
             });
 
-            $("#hotel_list span").click( (e) => {
+            $("#hotel_list span").click( function(e) {
               console.log($(e.target).text());
-              $("#target_hotel").text($(e.target).text());
+              $("#target_hotel_name").text($(e.target).text());
               $("#hotel_list").hide();
             });
 
@@ -181,9 +183,12 @@
       </div>
     </div>
 
+    <!--  -->
+
     <div class="list1">
       <div class="list1-background-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
-        <img src="../../public/client/images/02_list/list_ulsan.png" class="list1-forground-image">
+        <div class="list1-forground-image" style="background-image:url('../../public/client/images/02_list/list_ulsan.png')">
+        </div>
       </div>
     </div>
 
@@ -237,7 +242,8 @@
       <div class="list2-right">
         <div class="list2-right-list">
           <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
-            <img src="../../public/client/images/01_main/main_middle_icon_view.png" class="list1-forground-image">
+            <div class="list1-forground-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
+            </div>
             <div class="list-price-container">
               <span class="list-fake-price">10,000</span>
               <span class="list-real-price">49,500</span>
@@ -250,9 +256,8 @@
               <div class="sub-title">GWANG AHN HOUND HOTEL</div>
             </div>
             <div class="link">
-              <span class="link-btn">예약하러 가기</span>
-              <br>
-              <span class="link-btn">자세한 호텔정보</span>
+              <div class="link-btn">예약하러 가기</div>
+              <div class="link-btn">자세한 호텔정보</div>
             </div>
           </div>
           <div class="list2-right-list-info">
@@ -276,7 +281,8 @@
 
         <div class="list2-right-list">
           <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
-            <img src="../../public/client/images/01_main/main_middle_icon_view.png" class="list1-forground-image">
+            <div class="list1-forground-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
+            </div>
             <div class="list-price-container">
               <span class="list-fake-price">10,000</span>
               <span class="list-real-price">49,500</span>
@@ -288,9 +294,8 @@
               <div class="sub-title">GWANG AHN HOUND HOTEL</div>
             </div>
             <div class="link">
-              <span class="link-btn">예약하러 가기</span>
-              <br>
-              <span class="link-btn">자세한 호텔정보</span>
+              <div class="link-btn">예약하러 가기</div>
+              <div class="link-btn">자세한 호텔정보</div>
             </div>
           </div>
           <div class="list2-right-list-info">
@@ -313,7 +318,8 @@
         </div>
         <div class="list2-right-list">
           <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
-            <img src="../../public/client/images/01_main/main_middle_icon_view.png" class="list1-forground-image">
+            <div class="list1-forground-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
+            </div>
             <div class="list-price-container">
               <span class="list-fake-price">10,000</span>
               <span class="list-real-price">49,500</span>
@@ -325,9 +331,8 @@
               <div class="sub-title">GWANG AHN HOUND HOTEL</div>
             </div>
             <div class="link">
-              <span class="link-btn">예약하러 가기</span>
-              <br>
-              <span class="link-btn">자세한 호텔정보</span>
+              <div class="link-btn">예약하러 가기</div>
+              <div class="link-btn">자세한 호텔정보</div>
             </div>
           </div>
           <div class="list2-right-list-info">
@@ -350,7 +355,8 @@
         </div>
         <div class="list2-right-list">
           <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
-            <img src="../../public/client/images/01_main/main_middle_icon_view.png" class="list1-forground-image">
+            <div class="list1-forground-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
+            </div>
             <div class="list-price-container">
               <span class="list-fake-price">10,000</span>
               <span class="list-real-price">49,500</span>
@@ -362,9 +368,8 @@
               <div class="sub-title">GWANG AHN HOUND HOTEL</div>
             </div>
             <div class="link">
-              <span class="link-btn">예약하러 가기</span>
-              <br>
-              <span class="link-btn">자세한 호텔정보</span>
+              <div class="link-btn">예약하러 가기</div>
+              <div class="link-btn">자세한 호텔정보</div>
             </div>
           </div>
           <div class="list2-right-list-info">
@@ -387,7 +392,8 @@
         </div>
         <div class="list2-right-list">
           <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
-            <img src="../../public/client/images/01_main/main_middle_icon_view.png" class="list1-forground-image">
+            <div class="list1-forground-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
+            </div>
             <div class="list-price-container">
               <span class="list-fake-price">10,000</span>
               <span class="list-real-price">49,500</span>
@@ -399,9 +405,8 @@
               <div class="sub-title">GWANG AHN HOUND HOTEL</div>
             </div>
             <div class="link">
-              <span class="link-btn">예약하러 가기</span>
-              <br>
-              <span class="link-btn">자세한 호텔정보</span>
+              <div class="link-btn">예약하러 가기</div>
+              <div class="link-btn">자세한 호텔정보</div>
             </div>
           </div>
           <div class="list2-right-list-info">
@@ -424,7 +429,8 @@
         </div>
         <div class="list2-right-list">
           <div class="list2-right-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
-            <img src="../../public/client/images/01_main/main_middle_icon_view.png" class="list1-forground-image">
+            <div class="list1-forground-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
+            </div>
             <div class="list-price-container">
               <span class="list-fake-price">10,000</span>
               <span class="list-real-price">49,500</span>
@@ -436,9 +442,8 @@
               <div class="sub-title">GWANG AHN HOUND HOTEL</div>
             </div>
             <div class="link">
-              <span class="link-btn">예약하러 가기</span>
-              <br>
-              <span class="link-btn">자세한 호텔정보</span>
+              <div class="link-btn">예약하러 가기</div>
+              <div class="link-btn">자세한 호텔정보</div>
             </div>
           </div>
           <div class="list2-right-list-info">
@@ -510,7 +515,7 @@
           </div>
         </div>
         <script type="text/javascript">
-          $("#footer_list_btn").click(()=>{
+          $("#footer_list_btn").click( function() {
             $("#footer_list").toggle();
           })
         </script>
