--- a/views/client/main.html
+++ b/views/client/main.html
@@ -49,37 +49,33 @@
         </div>
         <div class='search-bar-list'>
 
-          <!-- 검색 -->
-          <div class='section search'>
+          <!-- 호텔 선택 -->
+          <div class='section hotel' style="border-left: 1px solid #888888;">
             <div class='title'>
-              <span> 예약 가능 객실 </span>
-            </div>
-            <div class='content' style="cursor:pointer;">
-              <img src="../../public/client/images/01_main/main_bar_search.png" class="btn-image">
-              <span> 검색 </span>
-            </div>
-          </div>
-
-          <!-- 인원수 -->
-          <div class='section count'>
-            <div class='title'>
-              <span> 인원수 </span>
+              <span> HOTEL BRAND </span>
             </div>
             <div class='content'>
-              <img id="count_down" src="../../public/client/images/01_main/main_bar_03.png" style="margin-right:20px;" class="btn-image">
-              <input id="count_val" class="input-search" type="number" name="" value="1"></input>
-              <img id="count_up" src="../../public/client/images/01_main/main_bar_04.png" style="margin-left:20px;" class="btn-image">
+              <div id="target_hotel">
+                <span id="target_hotel_name">호텔 선택</span>
+                <img id="select_hotel" src="../../public/client/images/01_main/main_bar_01.png" class="btn-image">
+              </div>
+            </div>
+            <div id="hotel_list" class="hotel-select">
+              <span> something 1 </span>
+              <span> something 21 </span>
+              <span> something 31 </span>
+              <span> something 41 </span>
             </div>
           </div>
 
-          <!-- 인원수 -->
-          <div class='section count'>
+          <!-- 호텔선택 -->
+          <div class='section date'>
             <div class='title'>
               <span> 예약 날짜 </span>
             </div>
-            <div class='content' style="margin-left:30px;padding-top:0px;">
-              <span style="font-size:1rem;display:inline-block;"> <span id="startDate">2018-09-20 </span> ~ </br> <span id="endDate"> 2018-09-21 </span> </span>
-              <img id="dates" src="../../public/client/images/01_main/main_bar_02.png" style="margin-bottom:40px;" class="btn-image">
+            <div class='content' >
+              <span style="font-size:1rem;display:inline-block;line-height: 1.2rem;"> <span id="startDate">2018-09-20 </span> ~ </br> <span id="endDate"> 2018-09-21 </span> </span>
+              <img id="dates" src="../../public/client/images/01_main/main_bar_02.png" class="btn-image">
               <script type="text/javascript">
                 var nowTemp = new Date();
                 var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
@@ -136,44 +132,48 @@
             </div>
           </div>
 
-          <!-- 호텔 선택 -->
-          <div class='section hotel' style="border-left: 1px solid #888888;">
+          <!-- 인원수 -->
+          <div class='section count'>
             <div class='title'>
-              <span> HOTEL BRAND </span>
+              <span> 인원수 </span>
             </div>
             <div class='content'>
-              <div id="target_hotel" style="display:inline-block;width:130px;margin-left:20px;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;">
-                호텔 선택
-              </div>
-              <img id="select_hotel" style="margin-bottom: 20px;" src="../../public/client/images/01_main/main_bar_01.png" class="btn-image">
+              <img id="count_down" src="../../public/client/images/01_main/main_bar_03.png" style="margin-right:30px;" class="btn-image">
+              <input id="count_val" class="input-search" type="number" name="" value="1"></input>
+              <img id="count_up" src="../../public/client/images/01_main/main_bar_04.png" style="margin-left:30px;" class="btn-image">
             </div>
-            <div id="hotel_list" class="hotel-select" style="width:220px;">
-              <span> something 1 </span>
-              <span> something 21 </span>
-              <span> something 31 </span>
-              <span> something 41 </span>
+          </div>
+
+          <!-- 검색 -->
+          <div class='section search'>
+            <div class='title'>
+              <span> 예약 가능 객실 </span>
+            </div>
+            <div class='content' style="cursor:pointer;">
+              <img src="../../public/client/images/01_main/main_bar_search.png" class="btn-image">
+              <span> 검색 </span>
             </div>
           </div>
 
           <script type="text/javascript">
-            $("#count_down").click( (e) => {
+            $("#count_down").click( function() {
               var cur_val = Number($("#count_val").val());
               if(cur_val <= 1) return false;
               $("#count_val").val( cur_val - 1 );
             });
 
-            $("#count_up").click( (e) => {
+            $("#count_up").click( function() {
               var cur_val = Number($("#count_val").val());
               $("#count_val").val( cur_val + 1 );
             });
 
-            $("#select_hotel").click( (e) => {
+            $("#select_hotel").click( function() {
               $("#hotel_list").toggle();
             });
 
-            $("#hotel_list span").click( (e) => {
+            $("#hotel_list span").click( function(e) {
               console.log($(e.target).text());
-              $("#target_hotel").text($(e.target).text());
+              $("#target_hotel_name").text($(e.target).text());
               $("#hotel_list").hide();
             });
 
@@ -336,7 +336,8 @@
       <div class="main5-body">
         <div class="main5-list">
           <div class="main5-list-image" style="background-image:url('../../public/client/images/main_sample1.jpg')">
-            <img style="margin:auto; cursor:pointer;" src="../../public/client/images/01_main/main_middle_icon_view.png" alt="">
+            <div class="main5-view-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
+            </div>
           </div>
 
           <div class="main5-list-wrapper">
@@ -349,12 +350,13 @@
             </div>
           </div>
 
-          <img style="margin-left:10px;" src="../../public/client/images/01_main/main_middle_again.png" alt="">
+          <img class="view-more-btn" src="../../public/client/images/01_main/main_middle_again.png" alt="">
         </div>
 
         <div class="main5-list">
           <div class="main5-list-image" style="background-image:url('../../public/client/images/main_sample1.jpg')">
-            <img style="margin:auto; cursor:pointer;" src="../../public/client/images/01_main/main_middle_icon_view.png" alt="">
+            <div class="main5-view-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
+            </div>
           </div>
 
           <div class="main5-list-wrapper">
@@ -367,12 +369,13 @@
             </div>
           </div>
 
-          <img style="margin-left:10px;" src="../../public/client/images/01_main/main_middle_again.png" alt="">
+          <img class="view-more-btn" src="../../public/client/images/01_main/main_middle_again.png" alt="">
         </div>
 
         <div class="main5-list">
           <div class="main5-list-image" style="background-image:url('../../public/client/images/main_sample1.jpg')">
-            <img style="margin:auto; cursor:pointer;" src="../../public/client/images/01_main/main_middle_icon_view.png" alt="">
+            <div class="main5-view-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
+            </div>
           </div>
 
           <div class="main5-list-wrapper">
@@ -385,12 +388,13 @@
             </div>
           </div>
 
-          <img style="margin-left:10px;" src="../../public/client/images/01_main/main_middle_again.png" alt="">
+          <img class="view-more-btn" src="../../public/client/images/01_main/main_middle_again.png" alt="">
         </div>
 
         <div class="main5-list">
           <div class="main5-list-image" style="background-image:url('../../public/client/images/main_sample1.jpg')">
-            <img style="margin:auto; cursor:pointer;" src="../../public/client/images/01_main/main_middle_icon_view.png" alt="">
+            <div class="main5-view-image" style="background-image:url('../../public/client/images/01_main/main_middle_icon_view.png')">
+            </div>
           </div>
 
           <div class="main5-list-wrapper">
@@ -524,7 +528,7 @@
           </div>
         </div>
         <script type="text/javascript">
-          $("#footer_list_btn").click(()=>{
+          $("#footer_list_btn").click( function() {
             $("#footer_list").toggle();
           })
         </script>
