--- a/public/client/css/gnb.css
+++ b/public/client/css/gnb.css
@@ -3,16 +3,15 @@
 }
 
 .gnb-container {
-  width: 1080px;
+  width: 1200px;
   padding: 5px 0;
   margin: 3px auto;
-  display: flex;
+  display: table;
 }
 
 .gnb-event {
-  -webkit-flex: 1;  /* Safari 6.1+ */
-  -ms-flex: 1;  /* IE 10 */
-  flex: 1;
+  width: 590px;
+  display: table-cell;
   border-right: 1px solid #555555;
   padding: 5px 0;
 }
@@ -34,20 +33,18 @@
 }
 
 .gnb-navbar {
-  -webkit-flex: 0.9;  /* Safari 6.1+ */
-  -ms-flex: 0.9;   /* IE 10 */
-  flex: 0.9;
-  text-align: right;
-  padding: 5px 0;
+  display: table;
+  width: 100%;
 }
 
 .gnb-navbar span {
-  display: inline-block;
+  display: table-cell;
   font-weight: 500;
   letter-spacing: 1px;
   font-size: 0.7rem;
   padding: 0 5px;
   cursor: pointer;
+  text-align: right;
 }
 
 .gnb-event-btn {
