--- a/public/client/css/hotel_page.css
+++ b/public/client/css/hotel_page.css
@@ -39,7 +39,7 @@ height: 6500px;}
     top:200px;
 }
 .content1, .content2{
-    width:1080px;
+    width:1200px;
     margin: 0 auto;
 }
 .content1{
@@ -56,16 +56,18 @@ height: 6500px;}
 	background-position: center center;
 }
 .content1 p:nth-child(2){
-    font-size:18px;
-
+    font-weight: 300;
+    font-size: 1.3rem;
+    margin-top: 0;
 }
 .content1 p:nth-child(3){
-    font-size:15px;
+    font-size: 1rem;
     padding: 40px 0 50px 0;
-
+    font-weight: 300;
 }
 .content1 p:nth-child(4){
-    font-size:19px;
+    font-size: 1.3rem;
+    font-weight: 300;
     line-height: 30px;
     margin-bottom: 100px;
 
@@ -79,22 +81,26 @@ height: 6500px;}
 }
 .content2 .content2_head{
     height: 40px;
-    width:1080px;
+    width:1200px;
     margin: 20px auto;
-    background-color: transparent;
-	background-size:     cover;
-	background-repeat:   no-repeat;
-	background-position: center center;
+    font-size: 1rem;
+    padding-left: 15px;
+    font-weight: 600;
 }
+
 #hotel_name{
     margin: 0 auto;
+}
+
+#hotel_service {
+
 }
 .name_desc{
     padding: 0 15px;
 }
 .name_desc p:first-child{
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 1rem;
+    font-weight: 600;
     letter-spacing: -0.4px;
 }
 .name_desc p:last-child{
@@ -141,7 +147,7 @@ height: 6500px;}
   height: 100%;
 }
 .room_section{
-    width:1080px;
+    width:1200px;
     height: 1600px;
     margin: 0 auto;
 }
@@ -149,10 +155,10 @@ height: 6500px;}
 
 }
 .room{
-    width: 290px;
-    height: 450px;
-    float: left;
-    margin: 40px 35px;
+  width: 330px;
+  height: 450px;
+  float: left;
+  margin: 40px 35px;
 }
 .room_img, .room_name, .room_info, .room_price{
     border: 1px solid #d6d4d4;
@@ -236,7 +242,7 @@ height: 6500px;}
 .map_space{
     width: 100%;
     height:900px;
-   
+
 }
 .map p{
     padding-left: 20px;
