--- a/public/client/css/list.css
+++ b/public/client/css/list.css
@@ -7,28 +7,37 @@
   background-position: center 0%;
   background-repeat: no-repeat;
   background-size: 100% 300px;
-  display: flex;
   margin-top: 1px;
+  position: relative;
 }
 
 .list1-forground-image {
   margin: auto;
   cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 
 .list2 {
-  width: 1080px;
+  width: 1200px;
   margin: auto;
   margin-top: 50px;
-  display: flex;
+  display: table;
 }
 
 .list2-left {
-  /* flex :1; */
-  margin-left:20px;
-  width: 250px;
+  display: table-cell;
+  width: 220px;
   padding-top: 30px;
   margin-top: 10px;
+  padding-right: 10px;
+  padding-left: 10px;
+  vertical-align: top;
   border-top: 1px solid black;
 }
 
@@ -37,23 +46,22 @@
 }
 
 .list2-left-list {
-  margin-top: 20px;
-
-  /* padding-left: 20px; */
+  margin-top: 15px;
+  display: table;
+  width: 100%;
 }
 
 .list2-left-title {
   font-weight: bold;
   letter-spacing: -1px;
+  display: table-cell;
+  width: 220px;
 }
 
 .list2-arrow {
-  float: right;
-  display: inline-block;
+  display: table-cell;
   vertical-align: middle;
-  line-height: 30px;
-  padding-top: 8px;
-  margin-right: 5px;
+  text-align: right;
 }
 
 .list2-left-region {
@@ -67,33 +75,38 @@
 .list2-left-region-list > div{
   padding: 8px 0;
   cursor: pointer;
+  display: table;
+  width: 100%;
 }
 
 .list2-left-region-title {
   letter-spacing: -1px;
   font-size: 0.9rem;
+  display: table-cell;
+  width: 220px;
 }
 
 .list2-left-region-title.active {
   font-weight: bold;
+
 }
 
 .list2-right {
-  flex: 3;
-  display: grid;
-  grid-template-columns: 50% 50%;
+  display: table;
 }
 
 .list2-right-list {
-  padding: 0 25px;
+  padding-left: 30px;
   margin-bottom: 100px;
+  display: inline-table;
+  width: 430px;
 }
 
 .list2-right-list-image{
-  height: 250px;
+  height: 300px;
   background-position: center 0%;
   background-repeat: no-repeat;
-  background-size: 100% 250px;
+  background-size: 100% 300px;
   display: flex;
   position: relative;
 }
@@ -103,7 +116,7 @@
   position: absolute;
   bottom: 0;
   text-align: right;
-  padding-right: 15px;
+  padding-right: 20px;
   padding-bottom: 10px;
 }
 
@@ -123,17 +136,19 @@
 }
 
 .list2-right-list-title {
-  display: flex;
-  padding-top: 20px;
+  display: table;
+  width: 100%;
+  padding-top: 10px;
   padding-bottom: 5px;
   border: 1px solid #d3d3d3;
   background: #fafafa;
-
+  width: 428px;
 }
 
 .list2-right-list-title .title{
-  flex: 2;
-  padding-left: 10px;
+  display: table-cell;
+  padding-left: 15px;
+  padding-top: 10px;
 }
 
 .list2-right-list-title .title .main-title{
@@ -149,8 +164,11 @@
 }
 
 .list2-right-list-title .link {
-  flex: 1;
-  margin-right: 10px;
+  display: table-cell;
+  vertical-align: top;
+  padding-right: 15px;
+  padding-top: 10px;
+  width: 120px;
 }
 
 .list2-right-list-title .link .link-btn{
@@ -158,18 +176,17 @@
   text-align: center;
   background: black;
   color: white;
-  display: inline-block;
-  width: 90px;
   font-size: 0.75rem;
-  float: right;
   cursor: pointer;
   letter-spacing: 1px;
   font-weight: 200;
+  margin-bottom: 4px;
+  display: block;
 }
 
 .list2-right-list-info {
   padding: 10px 0;
-  padding-left: 10px;
+  padding-left: 15px;
   border: 1px solid #d3d3d3;
   border-top: 0px;
   background: #fafafa;
@@ -184,7 +201,7 @@
 .list2-right-list-desc {
   font-size: 0.9rem;
   font-weight: 300;
-  padding: 10px;
+  padding: 10px 15px;
   padding-bottom: 30px;
   border: 1px solid #d3d3d3;
   border-top: 0px;
