--- a/public/client/css/mypage.css
+++ b/public/client/css/mypage.css
@@ -12,7 +12,7 @@ body{
 }
 .myPage_wrapper{
     width:100%;
-    
+
 }
 .myPage_logo{
     position: relative;
@@ -30,7 +30,7 @@ body{
     width:100%;
 }
 .myInfo_wrapper{
-    width: 1080px;
+    width: 1200px;
     margin: 0px auto;
     position: relative;
 
@@ -40,7 +40,7 @@ body{
     margin: 20px 0;
 }
 .myInfo_edit p{
-    padding: 3px 25px;
+    padding: 3px 30px;
     display: inline-block;
     color:white;
     font-size: 13px;
@@ -48,17 +48,22 @@ body{
     font-weight: 300;
     background-color: black;
     cursor: pointer;
+    margin-right: 30px;
 }
 .myInfo>div{
-    border-top: 1px solid #c6c6c6;
+    /* border-top: 1px solid #c6c6c6; */
     padding: 15px;
 }
 .myInfo_p{
-
+    font-weight: 300;
     letter-spacing: 0.8px;
 }
+
+.myInfo_p p {
+    margin: 5px 0;
+}
 .myInfo_bold{
-    font-weight: 900;
+    font-weight: 400;
 }
 table{
     width:100%;
@@ -118,7 +123,7 @@ table thead #e_price{
     text-align: center;
     margin: 25px auto;
     width:140px;
-    color: rgb(255,58,40);
+    color: #de8382;
     font-size: 13px;
     letter-spacing: 0.8px;
     font-weight: 300;
