--- a/public/client/css/pay.css
+++ b/public/client/css/pay.css
@@ -7,10 +7,10 @@ body{
 }
 .pay_banner{
     width:100%;
-    height: 300px;
+    height: 180px;
     background-color: black;
     position: relative;
-    top:5px;
+    top:2px;
 }
 .pay_wrapper{
     width:100%;
@@ -20,30 +20,31 @@ body{
     color:white;
     width: 200px;
     text-align: center;
-    font-size: 35px;
+    font-size: 1.5rem;
     letter-spacing: 2px;
     font-weight: 600;
     margin: auto;
     position: relative;
-    top: 120px;
+    top: 70px;
 }
 .pay_content{
     position: relative;
     top:50px;
     width:100%;
     height: 1500px;
+    margin-bottom: 200px;
 }
 .pay_content_wrapper{
-    width: 1080px;
+    width: 1200px;
     margin: 0 auto;
 }
 .pay_list{
-    width:650px;
+    width: 750px;
     float: left;
     height: auto;
 }
 .pay_bill{
-    width:400px;
+    width:450px;
     margin: 0 15px;
     float: left;
 }
@@ -53,10 +54,10 @@ body{
 }
 .pay_room_pic{
     background-color: transparent;
-	background-size:     cover;
-	background-repeat:   no-repeat;
-	background-position: center center;
-    width:270px;
+  	background-size:     cover;
+  	background-repeat:   no-repeat;
+  	background-position: center center;
+    width: 320px;
     height: 250px;
     margin: 25px;
     float: left;
@@ -98,10 +99,10 @@ body{
 }
 .pay_text_head{
     background-color: transparent;
-	background-size:contain;
-	background-repeat:   no-repeat;
-	background-position: center center;
-    width:620px;
+  	background-size:contain;
+  	background-repeat:   no-repeat;
+  	background-position: center center;
+    width:720px;
     height: 40px;
     margin:  25px 0 25px 25px;
 }
@@ -109,7 +110,7 @@ body{
     margin-left: 30px;
 }
 .p_name{
-    font-size:15px;
+    font-size: 1rem;
     margin: 10px;
     display: inline-block;
     float: left;
@@ -130,7 +131,7 @@ body{
     color:#ff6666;
     display: inline-block;
     height: 30px;
-    font-size: 11px;
+    font-size: 0.9rem;
     margin: 10px;
 }
 .extra_head{
@@ -138,15 +139,15 @@ body{
 	background-size: cover;
 	background-repeat:   no-repeat;
 	background-position: center center;
-    width:620px;
+    width:720px;
     height: 1.5px;
     margin:  10px 0 10px 25px;
 }
 .pay_extra{
 
 }
-.pay_extra p{
-    font-size: 15px;
+.pay_extra p, .pay_text p,
+.pay_point p, .pay_cancel p{
     font-weight: 600;
     letter-spacing: 0.8px;
     margin-left: 35px;
@@ -165,10 +166,10 @@ body{
     margin: 15px 10px 15px 35px;
 }
 .extra_select .extra_menu{
-    font-size: 16px;
+    font-size: 1rem;
 }
 .extra_select .extra_menu2{
-    font-size: 13px;
+    font-size: 0.9rem;
     color:rgb(255,58,40);
     margin-top: 5px;
     display: inline-block;
@@ -182,7 +183,7 @@ body{
     width:40px;
     text-align: center;
     padding: 4px 0 3px;
-    font-size: 13px;
+    font-size: 0.9rem;
     box-shadow: inset 0 0.5em 0.5em -1em  gray;
 }
 .extra_select input[type=button]{
@@ -233,7 +234,7 @@ body{
     float: left;
     width:510px;
     font-size: 15px;
-    margin: 0 0 10px 20px;
+    margin: 0 0 10px 10px;
 }
 .pay_policy .policy_button{
     color: #be0101;
@@ -246,7 +247,7 @@ body{
     height: 200px;
     width: 100%;
     border: 1px solid gray;
-    padding: 15px;
+    margin-left: 0;
     overflow: auto;
     display: none;
 }
@@ -260,6 +261,7 @@ body{
     margin-top: 30px;
     height: 80px;
     padding: 10px 10px;
+    padding-bottom: 5px;
 }
 
 .bill_checktime .bill_check{
@@ -275,48 +277,51 @@ body{
 	background-position: center center;
     width:20px;
     height: 20px;
-    margin: 30px 15px 10px 25px ;
+    margin: 45px 15px 10px 60px;
     float: left;
 
 }
 .bill_checktime .check_desc{
     font-size: 16px;
-    color:#ff6666;
+    color: #fd9999;
     padding-left: 10px;
 }
 .bill_checktime .checkdate{
-    font-size: 22px;
+    font-size: 1.6rem;
     font-weight: 100;
-    width:145px;
-    border-bottom: 1px solid #272727;
-
+    width : 180px;
+    border-bottom: 1px solid #ffffff;
+    letter-spacing: 1px;
 }
 .bill_checktime .checkdate i{
     padding:9px 10px 7px;
     font-size: 16px;
 }
 .bill_pd{
-    height: 50px;
+    height: 70px;
     margin: 2px 0 10px 0;
     padding: 10px 25px;
 }
 .bill_p{
-    font-size:13px;
+    font-size: 0.9rem;
+    font-weight: 200;
     line-height: 25px;
+    padding: 3px 0;
 }
 .bill_p span:last-child{
     float: right;
 }
 .bill_total{
 
-    height: 240px;
+    height: 280px;
     margin: 2px 0 ;
     padding: 10px 15px;
 }
 .bill_t{
-    font-size:15px;
+    font-size: 1rem;
+    font-weight: 300;
     line-height: 35px;
-    padding: 0 10px;
+    padding: 4px 10px;
 }
 .bill_t span:last-child{
     float: right;
@@ -327,8 +332,9 @@ body{
     padding-right: 10px;
 }
 .total_price p:first-child{
-    font-size: 16px;
-    color:#ff6666;
+    font-size: 1.2rem;
+    font-weight: 300;
+    color:#fd9999;
 }
 .total_price p:last-child{
     font-size: 28px;
@@ -340,10 +346,10 @@ body{
     background-color: white !important;
 }
 .pay_bill .payment{
-    width:197px;
+    width:221px;
     height: 80px;
     background-color: #ff6666;
-    font-size: 17px;
+    font-size: 1.3rem;
     line-height: 80px;
     text-align: center;
     cursor: pointer;
