--- a/views/client/hotel_brand.html
+++ b/views/client/hotel_brand.html
@@ -29,6 +29,8 @@
           </span>
         </div>
         <div class='gnb-navbar'>
+          <span class="my_page">강병욱님 / MY PAGE</span>
+          <span class="my_point">포인트 3,000P</span>
           <span> 호텔정보 </span>
           <span> 공지사항 </span>
           <span> 이벤트 </span>
@@ -47,37 +49,33 @@
         </div>
         <div class='search-bar-list'>
 
-          <!-- 검색 -->
-          <div class='section search'>
+          <!-- 호텔 선택 -->
+          <div class='section hotel' style="border-left: 1px solid #888888;">
             <div class='title'>
-              <span> 예약 가능 객실 </span>
-            </div>
-            <div class='content' style="cursor:pointer;">
-              <img src="../../public/client/images/01_main/main_bar_search.png" class="btn-image">
-              <span> 검색 </span>
-            </div>
-          </div>
-
-          <!-- 인원수 -->
-          <div class='section count'>
-            <div class='title'>
-              <span> 인원수 </span>
+              <span> HOTEL BRAND </span>
             </div>
             <div class='content'>
-              <img id="count_down" src="../../public/client/images/01_main/main_bar_03.png" style="margin-right:20px;" class="btn-image">
-              <input id="count_val" class="input-search" type="number" name="" value="1"></input>
-              <img id="count_up" src="../../public/client/images/01_main/main_bar_04.png" style="margin-left:20px;" class="btn-image">
+              <div id="target_hotel">
+                <span id="target_hotel_name">호텔 선택</span>
+                <img id="select_hotel" src="../../public/client/images/01_main/main_bar_01.png" class="btn-image">
+              </div>
+            </div>
+            <div id="hotel_list" class="hotel-select">
+              <span> something 1 </span>
+              <span> something 21 </span>
+              <span> something 31 </span>
+              <span> something 41 </span>
             </div>
           </div>
 
-          <!-- 인원수 -->
-          <div class='section count'>
+          <!-- 호텔선택 -->
+          <div class='section date'>
             <div class='title'>
               <span> 예약 날짜 </span>
             </div>
-            <div class='content' style="margin-left:30px;padding-top:0px;">
-              <span style="font-size:1rem;display:inline-block;"> <span id="startDate">2018-09-20 </span> ~ </br> <span id="endDate"> 2018-09-21 </span> </span>
-              <img id="dates" src="../../public/client/images/01_main/main_bar_02.png" style="margin-bottom:40px;" class="btn-image">
+            <div class='content' >
+              <span style="font-size:1rem;display:inline-block;line-height: 1.2rem;"> <span id="startDate">2018-09-20 </span> ~ </br> <span id="endDate"> 2018-09-21 </span> </span>
+              <img id="dates" src="../../public/client/images/01_main/main_bar_02.png" class="btn-image">
               <script type="text/javascript">
                 var nowTemp = new Date();
                 var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
@@ -134,44 +132,48 @@
             </div>
           </div>
 
-          <!-- 호텔 선택 -->
-          <div class='section hotel' style="border-left: 1px solid #888888;">
+          <!-- 인원수 -->
+          <div class='section count'>
             <div class='title'>
-              <span> HOTEL BRAND </span>
+              <span> 인원수 </span>
             </div>
             <div class='content'>
-              <div id="target_hotel" style="display:inline-block;width:130px;margin-left:20px;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;">
-                호텔 선택
-              </div>
-              <img id="select_hotel" style="margin-bottom: 20px;" src="../../public/client/images/01_main/main_bar_01.png" class="btn-image">
+              <img id="count_down" src="../../public/client/images/01_main/main_bar_03.png" style="margin-right:30px;" class="btn-image">
+              <input id="count_val" class="input-search" type="number" name="" value="1"></input>
+              <img id="count_up" src="../../public/client/images/01_main/main_bar_04.png" style="margin-left:30px;" class="btn-image">
             </div>
-            <div id="hotel_list" class="hotel-select" style="width:220px;">
-              <span> something 1 </span>
-              <span> something 21 </span>
-              <span> something 31 </span>
-              <span> something 41 </span>
+          </div>
+
+          <!-- 검색 -->
+          <div class='section search'>
+            <div class='title'>
+              <span> 예약 가능 객실 </span>
+            </div>
+            <div class='content' style="cursor:pointer;">
+              <img src="../../public/client/images/01_main/main_bar_search.png" class="btn-image">
+              <span> 검색 </span>
             </div>
           </div>
 
           <script type="text/javascript">
-            $("#count_down").click( (e) => {
+            $("#count_down").click( function() {
               var cur_val = Number($("#count_val").val());
               if(cur_val <= 1) return false;
               $("#count_val").val( cur_val - 1 );
             });
 
-            $("#count_up").click( (e) => {
+            $("#count_up").click( function() {
               var cur_val = Number($("#count_val").val());
               $("#count_val").val( cur_val + 1 );
             });
 
-            $("#select_hotel").click( (e) => {
+            $("#select_hotel").click( function() {
               $("#hotel_list").toggle();
             });
 
-            $("#hotel_list span").click( (e) => {
+            $("#hotel_list span").click( function(e) {
               console.log($(e.target).text());
-              $("#target_hotel").text($(e.target).text());
+              $("#target_hotel_name").text($(e.target).text());
               $("#hotel_list").hide();
             });
 
@@ -181,10 +183,11 @@
       </div>
     </div>
 
+    <!--  -->
+
     <div class="brand1">
       <div class="brand1-background" style="background-image: url('../../public/client/images/main_sample1.jpg');">
-        <div class="brand1-logo">
-          <img src="../../public/client/images/04_hotel_brand/brand_hound.png" class="brand1-logo-img">
+        <div class="brand1-foreground" style="background-image: url('../../public/client/images/04_hotel_brand/brand_hound.png');">
         </div>
       </div>
     </div>
@@ -198,8 +201,7 @@
           (4/287) 부산 부산진구 부전동 520-19 / 부산진구 중앙대로691번가길 10(부전동)
         </div>
         <div class="brand2-list-body">
-          <div class="brand2-list-image">
-            <img style="width:100%;height:100%;" src="../../public/client/images/main_sample1.jpg">
+          <div class="brand2-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
           </div>
           <div class="brand2-list-map" style="border:1px solid black;">
             <span> 지도 </span>
@@ -251,8 +253,7 @@
           (4/287) 부산 부산진구 부전동 520-19 / 부산진구 중앙대로691번가길 10(부전동)
         </div>
         <div class="brand2-list-body">
-          <div class="brand2-list-image">
-            <img style="width:100%;height:100%;" src="../../public/client/images/main_sample1.jpg">
+          <div class="brand2-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
           </div>
           <div class="brand2-list-map" style="border:1px solid black;">
             <span> 지도 </span>
@@ -304,8 +305,7 @@
           (4/287) 부산 부산진구 부전동 520-19 / 부산진구 중앙대로691번가길 10(부전동)
         </div>
         <div class="brand2-list-body">
-          <div class="brand2-list-image">
-            <img style="width:100%;height:100%;" src="../../public/client/images/main_sample1.jpg">
+          <div class="brand2-list-image" style="background-image: url('../../public/client/images/main_sample1.jpg');">
           </div>
           <div class="brand2-list-map" style="border:1px solid black;">
             <span> 지도 </span>
@@ -348,6 +348,8 @@
           </div>
         </div>
       </div>
+
+      
     </div>
 
     <div class="brand-divider" style="background-image: url('../../public/client/images/04_hotel_brand/brand_hound.png');">
